docs/upbound-provider-gcp/1.8/dataplex/v1beta1/asset.md
---
permalink: /upbound-provider-gcp/1.8/dataplex/v1beta1/asset/
---

# dataplex.v1beta1.asset

"Asset is the Schema for the Assets API. The Dataplex Asset resource"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDataplexZone(dataplexZone)`](#fn-specforproviderwithdataplexzone)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDiscoverySpec(discoverySpec)`](#fn-specforproviderwithdiscoveryspec)
    * [`fn withDiscoverySpecMixin(discoverySpec)`](#fn-specforproviderwithdiscoveryspecmixin)
    * [`fn withDisplayName(displayName)`](#fn-specforproviderwithdisplayname)
    * [`fn withLabels(labels)`](#fn-specforproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specforproviderwithlabelsmixin)
    * [`fn withLake(lake)`](#fn-specforproviderwithlake)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withProject(project)`](#fn-specforproviderwithproject)
    * [`fn withResourceSpec(resourceSpec)`](#fn-specforproviderwithresourcespec)
    * [`fn withResourceSpecMixin(resourceSpec)`](#fn-specforproviderwithresourcespecmixin)
    * [`obj spec.forProvider.dataplexZoneRef`](#obj-specforproviderdataplexzoneref)
      * [`fn withName(name)`](#fn-specforproviderdataplexzonerefwithname)
      * [`obj spec.forProvider.dataplexZoneRef.policy`](#obj-specforproviderdataplexzonerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdataplexzonerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdataplexzonerefpolicywithresolve)
    * [`obj spec.forProvider.dataplexZoneSelector`](#obj-specforproviderdataplexzoneselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdataplexzoneselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdataplexzoneselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdataplexzoneselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.dataplexZoneSelector.policy`](#obj-specforproviderdataplexzoneselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdataplexzoneselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdataplexzoneselectorpolicywithresolve)
    * [`obj spec.forProvider.discoverySpec`](#obj-specforproviderdiscoveryspec)
      * [`fn withCsvOptions(csvOptions)`](#fn-specforproviderdiscoveryspecwithcsvoptions)
      * [`fn withCsvOptionsMixin(csvOptions)`](#fn-specforproviderdiscoveryspecwithcsvoptionsmixin)
      * [`fn withEnabled(enabled)`](#fn-specforproviderdiscoveryspecwithenabled)
      * [`fn withExcludePatterns(excludePatterns)`](#fn-specforproviderdiscoveryspecwithexcludepatterns)
      * [`fn withExcludePatternsMixin(excludePatterns)`](#fn-specforproviderdiscoveryspecwithexcludepatternsmixin)
      * [`fn withIncludePatterns(includePatterns)`](#fn-specforproviderdiscoveryspecwithincludepatterns)
      * [`fn withIncludePatternsMixin(includePatterns)`](#fn-specforproviderdiscoveryspecwithincludepatternsmixin)
      * [`fn withJsonOptions(jsonOptions)`](#fn-specforproviderdiscoveryspecwithjsonoptions)
      * [`fn withJsonOptionsMixin(jsonOptions)`](#fn-specforproviderdiscoveryspecwithjsonoptionsmixin)
      * [`fn withSchedule(schedule)`](#fn-specforproviderdiscoveryspecwithschedule)
      * [`obj spec.forProvider.discoverySpec.csvOptions`](#obj-specforproviderdiscoveryspeccsvoptions)
        * [`fn withDelimiter(delimiter)`](#fn-specforproviderdiscoveryspeccsvoptionswithdelimiter)
        * [`fn withDisableTypeInference(disableTypeInference)`](#fn-specforproviderdiscoveryspeccsvoptionswithdisabletypeinference)
        * [`fn withEncoding(encoding)`](#fn-specforproviderdiscoveryspeccsvoptionswithencoding)
        * [`fn withHeaderRows(headerRows)`](#fn-specforproviderdiscoveryspeccsvoptionswithheaderrows)
      * [`obj spec.forProvider.discoverySpec.jsonOptions`](#obj-specforproviderdiscoveryspecjsonoptions)
        * [`fn withDisableTypeInference(disableTypeInference)`](#fn-specforproviderdiscoveryspecjsonoptionswithdisabletypeinference)
        * [`fn withEncoding(encoding)`](#fn-specforproviderdiscoveryspecjsonoptionswithencoding)
    * [`obj spec.forProvider.lakeRef`](#obj-specforproviderlakeref)
      * [`fn withName(name)`](#fn-specforproviderlakerefwithname)
      * [`obj spec.forProvider.lakeRef.policy`](#obj-specforproviderlakerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderlakerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderlakerefpolicywithresolve)
    * [`obj spec.forProvider.lakeSelector`](#obj-specforproviderlakeselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderlakeselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderlakeselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderlakeselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.lakeSelector.policy`](#obj-specforproviderlakeselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderlakeselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderlakeselectorpolicywithresolve)
    * [`obj spec.forProvider.resourceSpec`](#obj-specforproviderresourcespec)
      * [`fn withName(name)`](#fn-specforproviderresourcespecwithname)
      * [`fn withReadAccessMode(readAccessMode)`](#fn-specforproviderresourcespecwithreadaccessmode)
      * [`fn withType(type)`](#fn-specforproviderresourcespecwithtype)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withDiscoverySpec(discoverySpec)`](#fn-specinitproviderwithdiscoveryspec)
    * [`fn withDiscoverySpecMixin(discoverySpec)`](#fn-specinitproviderwithdiscoveryspecmixin)
    * [`fn withDisplayName(displayName)`](#fn-specinitproviderwithdisplayname)
    * [`fn withLabels(labels)`](#fn-specinitproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specinitproviderwithlabelsmixin)
    * [`fn withProject(project)`](#fn-specinitproviderwithproject)
    * [`fn withResourceSpec(resourceSpec)`](#fn-specinitproviderwithresourcespec)
    * [`fn withResourceSpecMixin(resourceSpec)`](#fn-specinitproviderwithresourcespecmixin)
    * [`obj spec.initProvider.discoverySpec`](#obj-specinitproviderdiscoveryspec)
      * [`fn withCsvOptions(csvOptions)`](#fn-specinitproviderdiscoveryspecwithcsvoptions)
      * [`fn withCsvOptionsMixin(csvOptions)`](#fn-specinitproviderdiscoveryspecwithcsvoptionsmixin)
      * [`fn withEnabled(enabled)`](#fn-specinitproviderdiscoveryspecwithenabled)
      * [`fn withExcludePatterns(excludePatterns)`](#fn-specinitproviderdiscoveryspecwithexcludepatterns)
      * [`fn withExcludePatternsMixin(excludePatterns)`](#fn-specinitproviderdiscoveryspecwithexcludepatternsmixin)
      * [`fn withIncludePatterns(includePatterns)`](#fn-specinitproviderdiscoveryspecwithincludepatterns)
      * [`fn withIncludePatternsMixin(includePatterns)`](#fn-specinitproviderdiscoveryspecwithincludepatternsmixin)
      * [`fn withJsonOptions(jsonOptions)`](#fn-specinitproviderdiscoveryspecwithjsonoptions)
      * [`fn withJsonOptionsMixin(jsonOptions)`](#fn-specinitproviderdiscoveryspecwithjsonoptionsmixin)
      * [`fn withSchedule(schedule)`](#fn-specinitproviderdiscoveryspecwithschedule)
      * [`obj spec.initProvider.discoverySpec.csvOptions`](#obj-specinitproviderdiscoveryspeccsvoptions)
        * [`fn withDelimiter(delimiter)`](#fn-specinitproviderdiscoveryspeccsvoptionswithdelimiter)
        * [`fn withDisableTypeInference(disableTypeInference)`](#fn-specinitproviderdiscoveryspeccsvoptionswithdisabletypeinference)
        * [`fn withEncoding(encoding)`](#fn-specinitproviderdiscoveryspeccsvoptionswithencoding)
        * [`fn withHeaderRows(headerRows)`](#fn-specinitproviderdiscoveryspeccsvoptionswithheaderrows)
      * [`obj spec.initProvider.discoverySpec.jsonOptions`](#obj-specinitproviderdiscoveryspecjsonoptions)
        * [`fn withDisableTypeInference(disableTypeInference)`](#fn-specinitproviderdiscoveryspecjsonoptionswithdisabletypeinference)
        * [`fn withEncoding(encoding)`](#fn-specinitproviderdiscoveryspecjsonoptionswithencoding)
    * [`obj spec.initProvider.resourceSpec`](#obj-specinitproviderresourcespec)
      * [`fn withName(name)`](#fn-specinitproviderresourcespecwithname)
      * [`fn withReadAccessMode(readAccessMode)`](#fn-specinitproviderresourcespecwithreadaccessmode)
      * [`fn withType(type)`](#fn-specinitproviderresourcespecwithtype)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Asset

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"AssetSpec defines the desired state of Asset"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDataplexZone

```ts
withDataplexZone(dataplexZone)
```

"The zone for the resource"

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"Optional. Description of the asset."

### fn spec.forProvider.withDiscoverySpec

```ts
withDiscoverySpec(discoverySpec)
```

"Required. Specification of the discovery feature applied to data referenced by this asset. When this spec is left unset, the asset will use the spec set on the parent zone."

### fn spec.forProvider.withDiscoverySpecMixin

```ts
withDiscoverySpecMixin(discoverySpec)
```

"Required. Specification of the discovery feature applied to data referenced by this asset. When this spec is left unset, the asset will use the spec set on the parent zone."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"Optional. User friendly display name."

### fn spec.forProvider.withLabels

```ts
withLabels(labels)
```

"Optional. User defined labels for the asset."

### fn spec.forProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Optional. User defined labels for the asset."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLake

```ts
withLake(lake)
```

"The lake for the resource"

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The location for the resource"

### fn spec.forProvider.withProject

```ts
withProject(project)
```

"The project for the resource"

### fn spec.forProvider.withResourceSpec

```ts
withResourceSpec(resourceSpec)
```

"Required. Immutable. Specification of the resource that is referenced by this asset."

### fn spec.forProvider.withResourceSpecMixin

```ts
withResourceSpecMixin(resourceSpec)
```

"Required. Immutable. Specification of the resource that is referenced by this asset."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.dataplexZoneRef

"Reference to a Zone in dataplex to populate dataplexZone."

### fn spec.forProvider.dataplexZoneRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.dataplexZoneRef.policy

"Policies for referencing."

### fn spec.forProvider.dataplexZoneRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.dataplexZoneRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.dataplexZoneSelector

"Selector for a Zone in dataplex to populate dataplexZone."

### fn spec.forProvider.dataplexZoneSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.dataplexZoneSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.dataplexZoneSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.dataplexZoneSelector.policy

"Policies for selection."

### fn spec.forProvider.dataplexZoneSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.dataplexZoneSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.discoverySpec

"Required. Specification of the discovery feature applied to data referenced by this asset. When this spec is left unset, the asset will use the spec set on the parent zone."

### fn spec.forProvider.discoverySpec.withCsvOptions

```ts
withCsvOptions(csvOptions)
```

"Optional. Configuration for CSV data."

### fn spec.forProvider.discoverySpec.withCsvOptionsMixin

```ts
withCsvOptionsMixin(csvOptions)
```

"Optional. Configuration for CSV data."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.discoverySpec.withEnabled

```ts
withEnabled(enabled)
```

"Required. Whether discovery is enabled."

### fn spec.forProvider.discoverySpec.withExcludePatterns

```ts
withExcludePatterns(excludePatterns)
```

"Optional. The list of patterns to apply for selecting data to exclude during discovery. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

### fn spec.forProvider.discoverySpec.withExcludePatternsMixin

```ts
withExcludePatternsMixin(excludePatterns)
```

"Optional. The list of patterns to apply for selecting data to exclude during discovery. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.discoverySpec.withIncludePatterns

```ts
withIncludePatterns(includePatterns)
```

"Optional. The list of patterns to apply for selecting data to include during discovery if only a subset of the data should considered. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

### fn spec.forProvider.discoverySpec.withIncludePatternsMixin

```ts
withIncludePatternsMixin(includePatterns)
```

"Optional. The list of patterns to apply for selecting data to include during discovery if only a subset of the data should considered. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.discoverySpec.withJsonOptions

```ts
withJsonOptions(jsonOptions)
```

"Optional. Configuration for Json data."

### fn spec.forProvider.discoverySpec.withJsonOptionsMixin

```ts
withJsonOptionsMixin(jsonOptions)
```

"Optional. Configuration for Json data."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.discoverySpec.withSchedule

```ts
withSchedule(schedule)
```

"Optional. Cron schedule (https://en.wikipedia.org/wiki/Cron) for running discovery periodically. Successive discovery runs must be scheduled at least 60 minutes apart. The default value is to run discovery every 60 minutes. To explicitly set a timezone to the cron tab, apply a prefix in the cron tab: \"CRON_TZ=${IANA_TIME_ZONE}\" or TZ=${IANA_TIME_ZONE}\". The ${IANA_TIME_ZONE} may only be a valid string from IANA time zone database. For example, \"CRON_TZ=America/New_York 1 * * * *\", or \"TZ=America/New_York 1 * * * *\"."

## obj spec.forProvider.discoverySpec.csvOptions

"Optional. Configuration for CSV data."

### fn spec.forProvider.discoverySpec.csvOptions.withDelimiter

```ts
withDelimiter(delimiter)
```

"Optional. The delimiter being used to separate values. This defaults to ','."

### fn spec.forProvider.discoverySpec.csvOptions.withDisableTypeInference

```ts
withDisableTypeInference(disableTypeInference)
```

"Optional. Whether to disable the inference of data type for Json data. If true, all columns will be registered as their primitive types (strings, number or boolean)."

### fn spec.forProvider.discoverySpec.csvOptions.withEncoding

```ts
withEncoding(encoding)
```

"Optional. The character encoding of the data. The default is UTF-8."

### fn spec.forProvider.discoverySpec.csvOptions.withHeaderRows

```ts
withHeaderRows(headerRows)
```

"Optional. The number of rows to interpret as header rows that should be skipped when reading data rows."

## obj spec.forProvider.discoverySpec.jsonOptions

"Optional. Configuration for Json data."

### fn spec.forProvider.discoverySpec.jsonOptions.withDisableTypeInference

```ts
withDisableTypeInference(disableTypeInference)
```

"Optional. Whether to disable the inference of data type for Json data. If true, all columns will be registered as their primitive types (strings, number or boolean)."

### fn spec.forProvider.discoverySpec.jsonOptions.withEncoding

```ts
withEncoding(encoding)
```

"Optional. The character encoding of the data. The default is UTF-8."

## obj spec.forProvider.lakeRef

"Reference to a Lake in dataplex to populate lake."

### fn spec.forProvider.lakeRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.lakeRef.policy

"Policies for referencing."

### fn spec.forProvider.lakeRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.lakeRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.lakeSelector

"Selector for a Lake in dataplex to populate lake."

### fn spec.forProvider.lakeSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.lakeSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.lakeSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.lakeSelector.policy

"Policies for selection."

### fn spec.forProvider.lakeSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.lakeSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceSpec

"Required. Immutable. Specification of the resource that is referenced by this asset."

### fn spec.forProvider.resourceSpec.withName

```ts
withName(name)
```

"Immutable. Relative name of the cloud resource that contains the data that is being managed within a lake. For example: projects/{project_number}/buckets/{bucket_id} projects/{project_number}/datasets/{dataset_id}"

### fn spec.forProvider.resourceSpec.withReadAccessMode

```ts
withReadAccessMode(readAccessMode)
```

"Optional. Determines how read permissions are handled for each asset and their associated tables. Only available to storage buckets assets. Possible values: DIRECT, MANAGED"

### fn spec.forProvider.resourceSpec.withType

```ts
withType(type)
```

"Required. Immutable. Type of resource. Possible values: STORAGE_BUCKET, BIGQUERY_DATASET"

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"Optional. Description of the asset."

### fn spec.initProvider.withDiscoverySpec

```ts
withDiscoverySpec(discoverySpec)
```

"Required. Specification of the discovery feature applied to data referenced by this asset. When this spec is left unset, the asset will use the spec set on the parent zone."

### fn spec.initProvider.withDiscoverySpecMixin

```ts
withDiscoverySpecMixin(discoverySpec)
```

"Required. Specification of the discovery feature applied to data referenced by this asset. When this spec is left unset, the asset will use the spec set on the parent zone."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"Optional. User friendly display name."

### fn spec.initProvider.withLabels

```ts
withLabels(labels)
```

"Optional. User defined labels for the asset."

### fn spec.initProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Optional. User defined labels for the asset."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withProject

```ts
withProject(project)
```

"The project for the resource"

### fn spec.initProvider.withResourceSpec

```ts
withResourceSpec(resourceSpec)
```

"Required. Immutable. Specification of the resource that is referenced by this asset."

### fn spec.initProvider.withResourceSpecMixin

```ts
withResourceSpecMixin(resourceSpec)
```

"Required. Immutable. Specification of the resource that is referenced by this asset."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.discoverySpec

"Required. Specification of the discovery feature applied to data referenced by this asset. When this spec is left unset, the asset will use the spec set on the parent zone."

### fn spec.initProvider.discoverySpec.withCsvOptions

```ts
withCsvOptions(csvOptions)
```

"Optional. Configuration for CSV data."

### fn spec.initProvider.discoverySpec.withCsvOptionsMixin

```ts
withCsvOptionsMixin(csvOptions)
```

"Optional. Configuration for CSV data."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.discoverySpec.withEnabled

```ts
withEnabled(enabled)
```

"Required. Whether discovery is enabled."

### fn spec.initProvider.discoverySpec.withExcludePatterns

```ts
withExcludePatterns(excludePatterns)
```

"Optional. The list of patterns to apply for selecting data to exclude during discovery. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

### fn spec.initProvider.discoverySpec.withExcludePatternsMixin

```ts
withExcludePatternsMixin(excludePatterns)
```

"Optional. The list of patterns to apply for selecting data to exclude during discovery. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.discoverySpec.withIncludePatterns

```ts
withIncludePatterns(includePatterns)
```

"Optional. The list of patterns to apply for selecting data to include during discovery if only a subset of the data should considered. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

### fn spec.initProvider.discoverySpec.withIncludePatternsMixin

```ts
withIncludePatternsMixin(includePatterns)
```

"Optional. The list of patterns to apply for selecting data to include during discovery if only a subset of the data should considered. For Cloud Storage bucket assets, these are interpreted as glob patterns used to match object names. For BigQuery dataset assets, these are interpreted as patterns to match table names."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.discoverySpec.withJsonOptions

```ts
withJsonOptions(jsonOptions)
```

"Optional. Configuration for Json data."

### fn spec.initProvider.discoverySpec.withJsonOptionsMixin

```ts
withJsonOptionsMixin(jsonOptions)
```

"Optional. Configuration for Json data."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.discoverySpec.withSchedule

```ts
withSchedule(schedule)
```

"Optional. Cron schedule (https://en.wikipedia.org/wiki/Cron) for running discovery periodically. Successive discovery runs must be scheduled at least 60 minutes apart. The default value is to run discovery every 60 minutes. To explicitly set a timezone to the cron tab, apply a prefix in the cron tab: \"CRON_TZ=${IANA_TIME_ZONE}\" or TZ=${IANA_TIME_ZONE}\". The ${IANA_TIME_ZONE} may only be a valid string from IANA time zone database. For example, \"CRON_TZ=America/New_York 1 * * * *\", or \"TZ=America/New_York 1 * * * *\"."

## obj spec.initProvider.discoverySpec.csvOptions

"Optional. Configuration for CSV data."

### fn spec.initProvider.discoverySpec.csvOptions.withDelimiter

```ts
withDelimiter(delimiter)
```

"Optional. The delimiter being used to separate values. This defaults to ','."

### fn spec.initProvider.discoverySpec.csvOptions.withDisableTypeInference

```ts
withDisableTypeInference(disableTypeInference)
```

"Optional. Whether to disable the inference of data type for Json data. If true, all columns will be registered as their primitive types (strings, number or boolean)."

### fn spec.initProvider.discoverySpec.csvOptions.withEncoding

```ts
withEncoding(encoding)
```

"Optional. The character encoding of the data. The default is UTF-8."

### fn spec.initProvider.discoverySpec.csvOptions.withHeaderRows

```ts
withHeaderRows(headerRows)
```

"Optional. The number of rows to interpret as header rows that should be skipped when reading data rows."

## obj spec.initProvider.discoverySpec.jsonOptions

"Optional. Configuration for Json data."

### fn spec.initProvider.discoverySpec.jsonOptions.withDisableTypeInference

```ts
withDisableTypeInference(disableTypeInference)
```

"Optional. Whether to disable the inference of data type for Json data. If true, all columns will be registered as their primitive types (strings, number or boolean)."

### fn spec.initProvider.discoverySpec.jsonOptions.withEncoding

```ts
withEncoding(encoding)
```

"Optional. The character encoding of the data. The default is UTF-8."

## obj spec.initProvider.resourceSpec

"Required. Immutable. Specification of the resource that is referenced by this asset."

### fn spec.initProvider.resourceSpec.withName

```ts
withName(name)
```

"Immutable. Relative name of the cloud resource that contains the data that is being managed within a lake. For example: projects/{project_number}/buckets/{bucket_id} projects/{project_number}/datasets/{dataset_id}"

### fn spec.initProvider.resourceSpec.withReadAccessMode

```ts
withReadAccessMode(readAccessMode)
```

"Optional. Determines how read permissions are handled for each asset and their associated tables. Only available to storage buckets assets. Possible values: DIRECT, MANAGED"

### fn spec.initProvider.resourceSpec.withType

```ts
withType(type)
```

"Required. Immutable. Type of resource. Possible values: STORAGE_BUCKET, BIGQUERY_DATASET"

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."